--- a/web-client/answerer.html
+++ b/web-client/answerer.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <h1>Web Rtc</h1>
+        <textarea id="sendData" placeholder="Send a message" style="width: 500px; height: 50px"></textarea>
+        <br/>
+        <button id="sendDataBtn">Send Data</button>
         <script src="/answerScript.js"></script>
     </body>
 </html>
