A bit of coloring in

--- a/web-client/answerer.html
+++ b/web-client/answerer.html
@@ -8,14 +8,13 @@
         <h1>Web Rtc</h1>
         <div>
             <p id="connection-state">Pending</p>
-            <textarea id="sendData"
+            <textarea id="message-text-box"
                 placeholder="Send a message"
             ></textarea>
             <br/>
-            <button id="sendDataBtn">Send Data</button>
+            <button id="send-message-button">Send Data</button>
         </div>
-        <div id="messages">
-        <div>
+        <div id="messages"></div>
         <script src="/answerScript.js"></script>
     </body>
 </html>
