a seems working webrtc videocall client
Signed-off-by: gaojiawei <gaojiawei@xiaomi.com>

--- a/examples/videocall/index.html
+++ b/examples/videocall/index.html
@@ -30,6 +30,8 @@
 <body>
 <h1>libdatachannel streamer example client</h1>
 
+<h2 id="my-id">haha<h2>
+
 <h2>Options</h2>
 <div class="option">
     <input id="use-stun" type="checkbox"/>
