improve add streams
Signed-off-by: gaojiawei <gaojiawei@xiaomi.com>

--- a/examples/videocall/index.html
+++ b/examples/videocall/index.html
@@ -51,7 +51,7 @@
     <h2>Remote Peer</h2>
     <video id="video-peer" width="640" height="480" autoplay playsinline></video>
     <h2>Me</h2>
-    <video id="video-me" width="640" height="480" autoplay playsinline></video>
+    <video id="video-me" width="640" height="480" autoplay playsinline muted></video>
 </div>
 
 <h2>Data Channel</h2>
